@@ -10,6 +10,8 @@ Bug fixes:
   * mongoc_change_stream_next now reports an error if the resume token (_id) is
     not a document. Previously, an error was only reported if the field was
     missing.
+  * mongoc_collection_update with MONGOC_UPDATE_MULTI_UPDATE would fail if
+    retryWrites was enabled.
 
 mongo-c-driver 1.14.0
 =====================
